# settings

./: CMakeLists.txt  README.MD  settings.kdev4
include/: setting.h  settings.h
src/: CMakeLists.txt  setting.cpp  settings.cpp
